test/must_fail/api/must_fail_dir_too_many_args.ref
error: dir(path) require exactly 1 arguments but 2 was given
  [must_fail_dir_too_many_args.ngjs:0:0] in <anonymous>()
    dir('a', 'b');
    ^

hint: function 'dir(path)' was called with 2 arguments
hint: argument #0 was a (string)
hint: argument #1 was b (string)

Stack trace (1 frames):
  [must_fail_dir_too_many_args.ngjs:0:0] in <anonymous>()
    dir('a', 'b');
    ^

exit(7)
