test/must_fail/api/must_fail_dir_too_many_args.ngjs
#!/usr/bin/env ngspicejs
// one string arg needed
// linter: ngspicejs-lint
"use strict";

dir('a', 'b');
